<resources>
    <string-array name="title">
        <item>Add Report</item>
        <item>Your Report</item>
        <item>Setting</item>
        <item>Exit</item>

    </string-array>
    <string name="checkedcase">b</string>
    <string name="totalcase">a</string>
    <string name="status_h">Status : Pending </string>
    <string name="status_h1">Status : Solved </string>
    <string name="confirm">We sent a reset email to : </string>
    <string name="app_name">Instice1</string>
    <string name="title_activity_dashboard1">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="profile">Profile </string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_name">YOUR NAME</string>
    <string name="action_settings">Exit</string>
    <string name="no_history">Not Found any Report</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">New Report</string>
    <string name="menu_slideshow">Your Report</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">About Us</string>
    <string name="menu_send">Privacy Policy</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">All Reports</string>
    <string name="message">Your case status is updated as solved and status is updated by the department.</string>
    <string name="message1">Your case status is updated as unsolved and status is updated by the department.</string>
    <string name="supporting_text"> Are you want to update the status of the case?</string>
    <string name="dialog_title">Case Solved ?</string>
    <string name="dialog_title1">Case UnSolved ?</string>
    <string name="status">Yes</string>
    <string name="status1">No</string>
    <string name="title_report">Completed Reports</string>
    <string name="all_reports">Total Reports</string>
    <string name="title_add">Add Report</string>
    <string name="title_add1">Add Report</string>
    <string name="your_report">Report History</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_uncompleted">Pending Reports</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_logout">Logout</string>
    <string name="title_chngpass">Change Password</string>
    <string name="title_refresh">Refresh</string>
    <string name="namef">Name</string>
    <string name="emailf">Email</string>
    <string name="mobilef">Mobile no</string>
    <string name="reset">Change Password</string>
    <string name="addressf">Address</string>
    <string name="statef">State</string>
    <string name="countryf">Country</string>
    <string name="descf">Description</string>
    <string name="datef">Date</string>
    <string name="cdatef">Report Date</string>
    <string name="timef">Time</string>
    <string name="namefa">NAME</string>
    <string name="emailfa">EMAIL</string>
    <string name="mobilefa">MOBILE NO : </string>
    <string name="addressfa">ADDRESS :</string>
    <string name="descfa">DESCRIPTION :</string>
    <string name="cdatefa">INCIDENT DATE :</string>
    <string name="datefa">CURRENT DATE :</string>
    <string name="timefa">INCIDENT TIME :</string>
    <string name="title_activity_settings">Settings</string>
    <string name="content">Profile Picture</string>
    <string name="done">Save</string>
    <string name="edit">Edit</string>
    <string name="upload">Upload Photo</string>
    <string name="name_pro">Enter Your Name</string>
    <string name="email_pro">Email Id</string>
    <string name="terms1">Instice Terms and Conditions </string>
    <string name="body">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app.
        You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also
        shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property
        rights related to it, still belong to Government.
        Government is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services,
        at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
    </string>
    <string name="body1">The Instice app stores and processes personal data that you have provided to us, in order to provide our Service.
        It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone,
        which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your
        phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Instice app won’t work properly or at all.
        The app does use third party services that declare their own Terms and Conditions.
        Link to Terms and Conditions of third party service providers used by the app
    </string>
    <string name="body2"> •    Google Play Services</string>
    <string name="privacy1">Instice Privacy Policy</string>
    <string name="body11">Government built the Instice app as a Commercial app. This service is provided by Government and is intended for use as is.
          This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided
        to use our Service.If you choose to use our Service, then you agree to the collection and use of information in relation to this policy.
        The Personal Information that we collect is used for providing and improving the Service. we will not use or share your information with anyone
        except as described in this Privacy Policy.
    </string>
    <string name="body12">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Instice unless
        otherwise defined in this Privacy Policy.
    </string>
    <string name="privacy2">Information Collection and Use</string>
    <string name="body13">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information.
        The information that we request will be retained by us and used as described in this privacy policy.The app does use third party services that may
        collect information used to identify you.Link to privacy policy of third party service providers used by the app
    </string>
    <string name="body14"> •    Google Play Service</string>
    <string name="privacy3">Log Data</string>
    <string name="body15">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information
        (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address,
        device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other
        statistics.
    </string>
    <string name="privacy4">Cookies</string>
    <string name="body16">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser
        from the websites that you visit and are stored on your devices internal memory.
    </string>
    <string name="body17">This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect
        information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.
        If you choose to refuse our cookies, you may not be able to use some portions of this Service.
    </string>
    <string name="privacy5">Service Providers</string>
    <string name="body18">We may employ third-party companies and individuals due to the following reasons:</string>
    <string name="body19"> •  To facilitate our Service.</string>
    <string name="body20"> •  To provide the Service on our behalf.</string>
    <string name="body21"> •  To perform Service-related services.</string>
    <string name="body22"> •  To assist us in analyzing how our Service is used.</string>
    <string name="body23">We want to inform users of this Service that these third parties have access to your Personal Information.
        The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information
        for any other purpose.
    </string>
    <string name="privacy6">Security</string>
    <string name="body24">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
        But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute
        security.
    </string>
    <string name="privacy7">Links to Other Sites</string>
    <string name="body25">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
        But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its
        absolute security.
    </string>
    <string name="privacy8">Children’s Privacy</string>
    <string name="body26">These Services do not address anyone under the age of 13. we do not knowingly collect personally identifiable information from children
        under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers.
        If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to
        do necessary actions.
    </string>
    <string name="privacy9">Changes to This Privacy Policy</string>
    <string name="body27">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.
        We will notify you of any changes by posting the new Privacy Policy on this page.This policy is effective as of 2020-05-20.
    </string>
    <string name="privacy10">Contact Us</string>
    <string name="body28">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at s.ranjanbit@gmail.com.</string>
</resources>