<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_history_"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_privacy"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
