<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Privacy">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/AppTheme"
            android:background="@drawable/header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.000">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarP"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/header"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="2dp" >

                <ImageView
                    android:id="@+id/arrow_backP"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/arrow_back"
                    android:layout_gravity="center_vertical|start"
                    android:contentDescription="@string/content" />

                <TextView
                    android:id="@+id/textA"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/menu_send"
                    android:textColor="#000000"
                    android:textSize="19sp"
                    android:layout_marginStart="20dp" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView3p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/privacy1"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayoutp" />

        <TextView
            android:id="@+id/textView4p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3p" />

        <TextView
            android:id="@+id/textView5p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4p" />

        <TextView
            android:id="@+id/textView6p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5p" />

        <TextView
            android:id="@+id/textView7p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6p" />

        <TextView
            android:id="@+id/textView8p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7p" />

        <TextView
            android:id="@+id/textView9p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8p" />

        <TextView
            android:id="@+id/textView10p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9p" />

        <TextView
            android:id="@+id/textView11p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10p" />

        <TextView
            android:id="@+id/textView12p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/privacy4"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11p" />

        <TextView
            android:id="@+id/textView13p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12p" />

        <TextView
            android:id="@+id/textView14p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/body17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13p" />

        <TextView
            android:id="@+id/textView15p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14p" />

        <TextView
            android:id="@+id/textView16p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15p" />

        <TextView
            android:id="@+id/textView17p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16p" />

        <TextView
            android:id="@+id/textView18p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17p" />

        <TextView
            android:id="@+id/textView19p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18p" />

        <TextView
            android:id="@+id/textView20p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19p" />

        <TextView
            android:id="@+id/textView21p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20p" />

        <TextView
            android:id="@+id/textView22p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21p" />

        <TextView
            android:id="@+id/textView23p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22p" />

        <TextView
            android:id="@+id/textView24p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23p" />

        <TextView
            android:id="@+id/textView25p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24p" />


        <TextView
            android:id="@+id/textView26p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25p" />


        <TextView
            android:id="@+id/textView27p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26p" />

        <TextView
            android:id="@+id/textView28p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27p" />


        <TextView
            android:id="@+id/textView29p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/body27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28p" />

        <TextView
            android:id="@+id/textView30p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/privacy10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29p" />


        <TextView
            android:id="@+id/textView31p"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingBottom="64dp"
            android:text="@string/body28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30p" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>